// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Groups/MyGroups renders correctly when no group joined 1`] = `
<div
  className="MuiPaper-root-1 MuiPaper-shadow2-5 MuiPaper-rounded-2"
  style={
    Object {
      "width": "90%",
    }
  }
>
  <h2>
    Mes groupes
  </h2>
  <table
    className="MuiTable-root-28"
  >
    <tbody
      className="MuiTableBody-root-29"
    />
  </table>
</div>
`;

exports[`Groups/MyGroups renders correctly with different groups 1`] = `
<div
  className="MuiPaper-root-1 MuiPaper-shadow2-5 MuiPaper-rounded-2"
  style={
    Object {
      "width": "90%",
    }
  }
>
  <h2>
    Mes groupes
  </h2>
  <table
    className="MuiTable-root-28"
  >
    <tbody
      className="MuiTableBody-root-29"
    >
      <tr
        className="MuiTableRow-root-30"
      >
        <td
          className="MuiTableCell-root-35 MuiTableCell-padding-38"
        >
          <b>
            my-test-group
          </b>
        </td>
        <td
          className="MuiTableCell-root-35 MuiTableCell-padding-38"
        >
          <div
            className="MuiChip-root-42"
            onClick={undefined}
            onKeyDown={[Function]}
            role="button"
            tabIndex={-1}
          >
            <span
              className="MuiChip-label-47"
            >
              Membre
            </span>
          </div>
        </td>
      </tr>
      <tr
        className="MuiTableRow-root-30"
      >
        <td
          className="MuiTableCell-root-35 MuiTableCell-padding-38"
        >
          <b>
            my-test-group-2
          </b>
        </td>
        <td
          className="MuiTableCell-root-35 MuiTableCell-padding-38"
        >
          <div
            className="MuiChip-root-42"
            onClick={undefined}
            onKeyDown={[Function]}
            role="button"
            tabIndex={-1}
          >
            <span
              className="MuiChip-label-47"
            >
              En attente
            </span>
          </div>
        </td>
      </tr>
      <tr
        className="MuiTableRow-root-30"
      >
        <td
          className="MuiTableCell-root-35 MuiTableCell-padding-38"
        >
          <b>
            my-test-group-3
          </b>
        </td>
        <td
          className="MuiTableCell-root-35 MuiTableCell-padding-38"
        >
          <div
            className="MuiChip-root-42"
            onClick={undefined}
            onKeyDown={[Function]}
            role="button"
            tabIndex={-1}
          >
            <span
              className="MuiChip-label-47"
            >
              Admin
            </span>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
